# spark_dbt_datavault_trino

./: .env  ARTIGO.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  reset.ps1  reset.sh
.devcontainer/: Dockerfile  devcontainer.json
data/: data_dictionary.csv  ecommerce_customer_analytics.csv
dbt_datavault/: .user.yml  dbt_project.yml  profiles.yml
dbt_datavault/models/: schema.yml
dbt_datavault/models/raw_vault/hubs/: hub_category.sql  hub_country.sql  hub_customer.sql
dbt_datavault/models/raw_vault/links/: link_customer_category.sql  link_customer_country.sql
dbt_datavault/models/raw_vault/satellites/: sat_customer_details.sql  sat_customer_metrics.sql
dbt_datavault/models/staging/: stg_customers.sql
hive-metastore/: Dockerfile
hive-metastore/conf/: metastore-site.xml
minio_data/.minio.sys/: format.json
spark-connect/: Dockerfile
spark-connect/conf/: core-site.xml  spark-defaults.conf
src/: ingest_raw_datavault.py
trino/catalog/: hive.properties  iceberg.properties
